Create navbar base

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,22 @@
   <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
+  <header>
+    <nav>
+      <div class="nav-group">
+        <div id="nav-burger"></div>
+        <div id="nav-close"></div>
+        <a href="#top">
+          <img id="nav-logo" alt="" src=""/>
+        </a>
+      </div>
+      <div class="nav-group">
+        <div id="nav-search"></div>
+        <div id="nav-cart"></div>
+        <div id="nav-account"></div>
+      </div>
+    </nav>
+  </header>
   
   <script src="/js/main.js"></script>
 </body>
