--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,39 @@
   <!-- CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@3.0.0/reset.min.css" />
   <link rel="stylesheet" href="/css/style.css" />
+  <!-- icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
   <header>
+    <!-- navbar -->
     <nav>
-      <div class="nav-group">
-        <div id="nav-burger"></div>
-        <div id="nav-close"></div>
+      <div class="nav-group nav-left">
+        <button type="button" class="nav-btn" id="nav-burger">
+          <i class="bi bi-list" title="Open hamburger menu" aria-hidden="true"></i>
+          <span class="sr-only">Open hamburger menu</span>
+        </button>
+        <button type="button" class="nav-btn" id="nav-close">
+          <i class="bi bi-x-lg" title="Close hamburger menu" aria-hidden="true"></i>
+          <span class="sr-only">Close hamburger menu</span>
+        </button>
         <a href="#top">
           <img id="nav-logo" alt="" src=""/>
         </a>
       </div>
-      <div class="nav-group">
-        <div id="nav-search"></div>
-        <div id="nav-cart"></div>
-        <div id="nav-account"></div>
+      <div class="nav-group nav-right">
+        <button type="button" class="nav-btn" id="nav-search">
+          <i class="bi bi-search" title="Search" aria-hidden="true"></i>
+          <span class="sr-only">Search</span>
+        </button>
+        <button type="button" class="nav-btn" id="nav-profile">
+          <i class="bi bi-person-circle" title="User profile" aria-hidden="true"></i>
+          <span class="sr-only">User profile</span>
+        </button>
+        <button type="button" class="nav-btn" id="nav-cart">
+          <i class="bi bi-bag-fill" title="Shopping cart" aria-hidden="true"></i>
+          <span class="sr-only">Shopping cart</span>
+        </button>
       </div>
     </nav>
   </header>
