--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,16 @@
           <span class="sr-only">Shopping cart</span>
         </button>
       </div>
+      <div id="nav-links">
+        <ul>
+          <li><a href="/">Bedroom</a></li>
+          <li><a href="/">Living Room</a></li>
+          <li><a href="/">Kitchen</a></li>
+          <li><a href="/">Home Office</a></li>
+          <li><a href="/">Outdoor</a></li>
+          <li><a href="/">Decor</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
   
