--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@3.0.0/reset.min.css" />
   <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
   <!-- icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- libraries -->
@@ -56,7 +57,39 @@
       </div>
     </nav>
   </header>
-  
+  <main>
+    <!-- hero -->
+    <section id="hero">
+      <div id="hero-carousel" class="glide">
+        <div class="glide__track" data-glide-el="track">
+          <ul class="glide__slides">
+            <li class="glide__slide">
+              <img class="hero-img" alt="" src="" />
+            </li>
+            <li class="glide__slide hero-img">
+              <img class="hero-img" alt="" src="" />
+            </li>
+            <li class="glide__slide hero-img">
+              <img class="hero-img" alt="" src="" />
+            </li>
+          </ul>
+          <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">Previous</button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">Next</button>
+          </div>
+          <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+          </div>
+        </div>
+      </div>
+      
+    </section>
+  </main>
+  <!-- libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+
   <script src="/js/main.js"></script>
 </body>
 </html>
