--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,14 @@
             </li>
           </ul>
           <div class="glide__arrows" data-glide-el="controls">
-            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">Previous</button>
-            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">Next</button>
+            <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<">
+              <i class="bi bi-chevron-left" title="Previous" aria-hidden="true"></i>
+              <span class="sr-only">Previous</span>
+            </button>
+            <button type="button" class="glide__arrow glide__arrow--right" data-glide-dir=">">
+              <i class="bi bi-chevron-right" title="Next" aria-hidden="true"></i>
+              <span class="sr-only">Next</span>
+            </button>
           </div>
           <div class="glide__bullets" data-glide-el="controls[nav]">
             <button class="glide__bullet" data-glide-dir="=0"></button>
