--- a/public/index.html
+++ b/public/index.html
@@ -84,13 +84,21 @@
             </button>
           </div>
           <div class="glide__bullets" data-glide-el="controls[nav]">
-            <button class="glide__bullet" data-glide-dir="=0"></button>
-            <button class="glide__bullet" data-glide-dir="=1"></button>
-            <button class="glide__bullet" data-glide-dir="=2"></button>
+            <button type="button" class="glide__bullet" data-glide-dir="=0">
+              <i class="bi bi-circle-fill" title="1" aria-hidden="true"></i>
+              <span class="sr-only">1</span>
+            </button>
+            <button type="button" class="glide__bullet" data-glide-dir="=1">
+              <i class="bi bi-circle-fill" title="2" aria-hidden="true"></i>
+              <span class="sr-only">2</span>
+            </button>
+            <button type="button" class="glide__bullet" data-glide-dir="=2">
+              <i class="bi bi-circle-fill" title="1" aria-hidden="true"></i>
+              <span class="sr-only">3</span>
+            </button>
           </div>
         </div>
       </div>
-      
     </section>
   </main>
   <!-- libraries -->
