--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,15 @@
           <span class="sr-only">Shopping cart</span>
         </button>
       </div>
+      <div id="nav-search-bar">
+        <form method="get" action="/search">
+          <input type="search" name="q" placeholder="Search" />
+          <button type="submit" id="search-btn" value="">
+            <i class="bi bi-search" title="Search" aria-hidden="true"></i>
+            <span class="sr-only">Search</span>
+          </button>
+        </form>
+      </div>
       <div id="nav-links">
         <ul>
           <li><a href="/">Bedroom</a></li>
