Add search bar functionality

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
           <i class="bi bi-list" title="Open hamburger menu" aria-hidden="true"></i>
           <span class="sr-only">Open hamburger menu</span>
         </button>
-        <button type="button" class="nav-btn" id="nav-close">
+        <button type="button" class="nav-btn hidden" id="nav-close">
           <i class="bi bi-x-lg" title="Close hamburger menu" aria-hidden="true"></i>
           <span class="sr-only">Close hamburger menu</span>
         </button>
@@ -45,7 +45,7 @@
           <span class="sr-only">Shopping cart</span>
         </button>
       </div>
-      <div id="nav-search-bar">
+      <div id="nav-search-bar" class="hidden">
         <form method="get" action="/search">
           <input type="search" name="q" placeholder="Search" />
           <button type="submit" id="search-btn" value="">
