Add product category buttons

--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,13 @@
         </div>
       </div>
     </section>
+    <section id="products">
+      <ul class="products-categories">
+        <li><button>Featured</button></li>
+        <li><button>New</button></li>
+        <li><button>Bestsellers</button></li>
+      </ul>
+    </section>
   </main>
   <!-- libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
