Add product cards

--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,73 @@
         <li><button>New</button></li>
         <li><button>Bestsellers</button></li>
       </ul>
+
+      <div class="product-cards products-featured">
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+      </div>
+      <div class="product-cards products-new">
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+      </div>
+      <div class="product-cards products-bestsellers">
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+        <article class="product-card">
+          <img class="product-img" alt="" src=""/>
+          <h3 class="product-name">Product Name</h3>
+          <p class="product-price">$100.00</p>
+        </article>
+      </div>
     </section>
   </main>
   <!-- libraries -->
