Add product category buttons functionality

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
         <li><button>Bestsellers</button></li>
       </ul>
 
-      <div class="product-cards products-featured">
+      <div id="products-featured" class="product-cards active">
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
           <h3 class="product-name">Product Name</h3>
@@ -138,7 +138,7 @@
           <p class="product-price">$100.00</p>
         </article>
       </div>
-      <div class="product-cards products-new">
+      <div id="products-new" class="product-cards">
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
           <h3 class="product-name">Product Name</h3>
@@ -160,7 +160,7 @@
           <p class="product-price">$100.00</p>
         </article>
       </div>
-      <div class="product-cards products-bestsellers">
+      <div id="products-bestsellers" class="product-cards">
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
           <h3 class="product-name">Product Name</h3>
