--- a/public/index.html
+++ b/public/index.html
@@ -119,66 +119,66 @@
       <div id="products-featured" class="product-cards active">
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
       </div>
       <div id="products-new" class="product-cards">
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
       </div>
       <div id="products-bestsellers" class="product-cards">
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
-          <h3 class="product-name">Product Name</h3>
+          <p class="product-name">Product Name</p>
           <p class="product-price">$100.00</p>
         </article>
       </div>
