Add collections section

--- a/public/index.html
+++ b/public/index.html
@@ -183,6 +183,16 @@
         </article>
       </div>
     </section>
+    <section id="collections">
+      <h2>Collections</h2>
+      <div id="collections-container">
+        <img id="collection-1" class="collection-img" alt="" src=""/>
+        <img id="collection-2" class="collection-img" alt="" src=""/>
+        <img id="collection-3" class="collection-img" alt="" src=""/>
+        <img id="collection-4" class="collection-img" alt="" src=""/>
+        <img id="collection-5" class="collection-img" alt="" src=""/>
+      </div>
+    </section>
   </main>
   <!-- libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
