--- a/public/index.html
+++ b/public/index.html
@@ -196,6 +196,7 @@
   </main>
   <!-- libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+  <script src="https://cdn.jsdelivr.net/npm/macy@2"></script>
 
   <script src="/js/main.js"></script>
 </body>
