--- a/public/index.html
+++ b/public/index.html
@@ -196,46 +196,52 @@
   </main>
   <!-- footer -->
   <footer>
-    <h2>Company Information</h2>
-    <ul>
-      <li><a href="/">About Us</a></li>
-      <li><a href="/">Careers</a></li>
-      <li><a href="/">Privacy Policy</a></li>
-      <li><a href="/">Terms and Conditions</a></li>
-    </ul>
-    <h2>Customer Service</h2>
-    <ul>
-      <li><a href="/">Contact Us</a></li>
-      <li><a href="/">FAQs</a></li>
-      <li><a href="/">Shipping and Returns</a></li>
-      <li><a href="/">Order Tracking</a></li>
-    </ul>
-    <ul>
-      <li>
-        <a href="/">
-          <i class="bi bi-facebook" title="Facebook" aria-hidden="true"></i>
-          <span class="sr-only">Facebook</span>
-        </a>
-      </li>
-      <li>
-        <a href="/">
-          <i class="bi bi-instagram" title="Instagram" aria-hidden="true"></i>
-          <span class="sr-only">Instagram</span>
-        </a>
-      </li>
-      <li>
-        <a href="/">
-          <i class="bi bi-twitter-x" title="Twitter" aria-hidden="true"></i>
-          <span class="sr-only">Twitter</span>
-        </a>
-      </li>
-      <li>
-        <a href="/">
-          <i class="bi bi-pinterest" title="Pinterest" aria-hidden="true"></i>
-          <span class="sr-only">Pinterest</span>
-        </a>
-      </li>
-    </ul>
+    <section class="footer-links">
+      <h2>Company Information</h2>
+      <ul>
+        <li><a href="/">About Us</a></li>
+        <li><a href="/">Careers</a></li>
+        <li><a href="/">Privacy Policy</a></li>
+        <li><a href="/">Terms and Conditions</a></li>
+      </ul>
+    </section>
+    <section class="footer-links">
+      <h2>Customer Service</h2>
+      <ul>
+        <li><a href="/">Contact Us</a></li>
+        <li><a href="/">FAQs</a></li>
+        <li><a href="/">Shipping and Returns</a></li>
+        <li><a href="/">Order Tracking</a></li>
+      </ul>
+    </section>
+    <section class="footer-socials">
+      <ul>
+        <li>
+          <a href="/">
+            <i class="bi bi-facebook social-icon" title="Facebook" aria-hidden="true"></i>
+            <span class="sr-only">Facebook</span>
+          </a>
+        </li>
+        <li>
+          <a href="/">
+            <i class="bi bi-instagram social-icon" title="Instagram" aria-hidden="true"></i>
+            <span class="sr-only">Instagram</span>
+          </a>
+        </li>
+        <li>
+          <a href="/">
+            <i class="bi bi-twitter-x social-icon" title="Twitter" aria-hidden="true"></i>
+            <span class="sr-only">Twitter</span>
+          </a>
+        </li>
+        <li>
+          <a href="/">
+            <i class="bi bi-pinterest social-icon" title="Pinterest" aria-hidden="true"></i>
+            <span class="sr-only">Pinterest</span>
+          </a>
+        </li>
+      </ul>
+    </section>
   </footer>
   <!-- libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
