Add active style to selected category btn

--- a/public/index.html
+++ b/public/index.html
@@ -111,9 +111,9 @@
     </section>
     <section id="products">
       <ul class="products-categories">
-        <li><button>Featured</button></li>
-        <li><button>New</button></li>
-        <li><button>Bestsellers</button></li>
+        <li><button id="category-featured" class="active">Featured</button></li>
+        <li><button id="category-new">New</button></li>
+        <li><button id="category-bestsellers">Bestsellers</button></li>
       </ul>
 
       <div id="products-featured" class="product-cards active">
