--- a/public/index.html
+++ b/public/index.html
@@ -72,14 +72,14 @@
       <div id="hero-carousel" class="glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
-            <li class="glide__slide">
-              <img class="hero-img" alt="Kitchen with white center island and brown wooden stools" src="/img/hero-1.jpg" />
+            <li class="glide__slide hero-img">
+              <img alt="Kitchen with white center island and brown wooden stools" src="/img/hero-1.jpg" />
             </li>
             <li class="glide__slide hero-img">
-              <img class="hero-img" alt="Furniture set of white dining chairs and table in a brightly-lit room" src="/img/hero-2.jpg" />
+              <img alt="Furniture set of white dining chairs and table in a brightly-lit room" src="/img/hero-2.jpg" />
             </li>
             <li class="glide__slide hero-img">
-              <img class="hero-img" alt="Home office with white chair in front of table with a computer in a white room" src="/img/hero-3.jpg" />
+              <img alt="Home office with white chair in front of table with a computer in a white room" src="/img/hero-3.jpg" />
             </li>
           </ul>
           <div class="glide__arrows" data-glide-el="controls">
