Add hero CTA and btn

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,10 @@
     <!-- hero -->
     <section id="hero">
       <div id="hero-carousel" class="glide">
+        <div class="hero-overlay">
+          <h2>Love the Space You Live In</h2>
+          <button>Shop Now</button>
+        </div>
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             <li class="glide__slide hero-img">
