--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>okaeri</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@3.0.0/reset.min.css" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <!-- icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- libraries -->
@@ -27,8 +31,9 @@
           <i class="bi bi-x-lg" title="Close hamburger menu" aria-hidden="true"></i>
           <span class="sr-only">Close hamburger menu</span>
         </button>
-        <a href="#top">
-          <img id="nav-logo" alt="" src=""/>
+        <a id="nav-logo" href="#top">
+          <img alt="okaeri logo" src="/img/logo.svg"/>
+          <h1>okaeri</h1>
         </a>
       </div>
       <div class="nav-group nav-right">
