--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,7 @@
       </div>
       <div id="nav-search-bar" class="hidden">
         <form method="get" action="/search">
-          <input type="search" name="q" placeholder="Search" />
-          <button type="submit" id="search-btn" value="">
-            <i class="bi bi-search" title="Search" aria-hidden="true"></i>
-            <span class="sr-only">Search</span>
-          </button>
+          <input id="search-input" type="search" name="q" placeholder="Search" />
         </form>
       </div>
       <div id="nav-links">
@@ -253,6 +249,7 @@
     </section>
   </footer>
   <!-- libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
   <script src="https://cdn.jsdelivr.net/npm/macy@2"></script>
 
