--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,13 @@
         </a>
       </div>
       <div class="nav-group nav-right">
-        <div id="nav-search-bar" class="hidden">
+        <div id="nav-search-bar" >
           <form method="get" action="/search">
             <input id="search-input" type="search" name="q" placeholder="Search" />
+            <button type="submit" id="search-btn" value="">
+              <i class="bi bi-search" title="Search" aria-hidden="true"></i>
+              <span class="sr-only">Search</span>
+            </button>
           </form>
         </div>
         <button type="button" class="nav-btn" id="nav-search">
