--- a/public/index.html
+++ b/public/index.html
@@ -22,42 +22,44 @@
   <header>
     <!-- navbar -->
     <nav>
-      <div class="nav-group nav-left">
-        <button type="button" class="nav-btn" id="nav-burger">
-          <i class="bi bi-list" title="Open hamburger menu" aria-hidden="true"></i>
-          <span class="sr-only">Open hamburger menu</span>
-        </button>
-        <button type="button" class="nav-btn hidden" id="nav-close">
-          <i class="bi bi-x-lg" title="Close hamburger menu" aria-hidden="true"></i>
-          <span class="sr-only">Close hamburger menu</span>
-        </button>
-        <a id="nav-logo" href="#top">
-          <img alt="okaeri logo" src="/img/logo.svg"/>
-          <h1>okaeri</h1>
-        </a>
-      </div>
-      <div class="nav-group nav-right">
-        <div id="nav-search-bar" >
-          <form method="get" action="/search">
-            <input id="search-input" type="search" name="q" placeholder="Search" />
-            <button type="submit" id="search-btn" value="">
-              <i class="bi bi-search" title="Search" aria-hidden="true"></i>
-              <span class="sr-only">Search</span>
-            </button>
-          </form>
+      <div id="nav-topbar">
+        <div class="nav-group nav-left">
+          <button type="button" class="nav-btn" id="nav-burger">
+            <i class="bi bi-list" title="Open hamburger menu" aria-hidden="true"></i>
+            <span class="sr-only">Open hamburger menu</span>
+          </button>
+          <button type="button" class="nav-btn hidden" id="nav-close">
+            <i class="bi bi-x-lg" title="Close hamburger menu" aria-hidden="true"></i>
+            <span class="sr-only">Close hamburger menu</span>
+          </button>
+          <a id="nav-logo" href="#top">
+            <img alt="okaeri logo" src="/img/logo.svg"/>
+            <h1>okaeri</h1>
+          </a>
         </div>
-        <button type="button" class="nav-btn" id="nav-search">
-          <i class="bi bi-search" title="Search" aria-hidden="true"></i>
-          <span class="sr-only">Search</span>
-        </button>
-        <button type="button" class="nav-btn" id="nav-profile">
-          <i class="bi bi-person-circle" title="User profile" aria-hidden="true"></i>
-          <span class="sr-only">User profile</span>
-        </button>
-        <button type="button" class="nav-btn" id="nav-cart">
-          <i class="bi bi-bag-fill" title="Shopping cart" aria-hidden="true"></i>
-          <span class="sr-only">Shopping cart</span>
-        </button>
+        <div class="nav-group nav-right">
+          <div id="nav-search-bar" >
+            <form method="get" action="/search">
+              <input id="search-input" type="search" name="q" placeholder="Search" />
+              <button type="submit" id="search-btn" value="">
+                <i class="bi bi-search" title="Search" aria-hidden="true"></i>
+                <span class="sr-only">Search</span>
+              </button>
+            </form>
+          </div>
+          <button type="button" class="nav-btn" id="nav-search">
+            <i class="bi bi-search" title="Search" aria-hidden="true"></i>
+            <span class="sr-only">Search</span>
+          </button>
+          <button type="button" class="nav-btn" id="nav-profile">
+            <i class="bi bi-person-circle" title="User profile" aria-hidden="true"></i>
+            <span class="sr-only">User profile</span>
+          </button>
+          <button type="button" class="nav-btn" id="nav-cart">
+            <i class="bi bi-bag-fill" title="Shopping cart" aria-hidden="true"></i>
+            <span class="sr-only">Shopping cart</span>
+          </button>
+        </div>
       </div>
       <div id="nav-links">
         <ul>
