Hide search bar by default on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
           </a>
         </div>
         <div class="nav-group nav-right">
-          <div id="nav-search-bar" >
+          <div id="nav-search-bar" class="hidden">
             <form method="get" action="/search">
               <input id="search-input" type="search" name="q" placeholder="Search" />
               <button type="submit" id="search-btn" value="">
