--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
     <section id="hero">
       <div id="hero-carousel" class="glide">
         <div class="hero-overlay">
-          <h2>Love the Space You Live In</h2>
+          <h2>Love the Space<br>You Live In</h2>
           <button>Shop Now</button>
         </div>
         <div class="glide__track" data-glide-el="track">
