--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <!-- icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <!-- libraries -->
+  <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
@@ -23,6 +23,7 @@
     <!-- navbar -->
     <nav>
       <div id="nav-topbar">
+        <!-- burger menu icons -->
         <div class="nav-group nav-left">
           <button type="button" class="nav-btn" id="nav-burger">
             <i class="bi bi-list" title="Open hamburger menu" aria-hidden="true"></i>
@@ -32,12 +33,14 @@
             <i class="bi bi-x-lg" title="Close hamburger menu" aria-hidden="true"></i>
             <span class="sr-only">Close hamburger menu</span>
           </button>
+          <!-- logo -->
           <a id="nav-logo" href="#top">
             <img alt="okaeri logo" src="/img/logo.svg"/>
             <h1>okaeri</h1>
           </a>
         </div>
         <div class="nav-group nav-right">
+          <!-- search bar -->
           <div id="nav-search-bar" class="hidden">
             <form method="get" action="/search">
               <input id="search-input" type="search" name="q" placeholder="Search" />
@@ -47,6 +50,7 @@
               </button>
             </form>
           </div>
+          <!-- search, profile, cart icons -->
           <button type="button" class="nav-btn" id="nav-search">
             <i class="bi bi-search" title="Search" aria-hidden="true"></i>
             <span class="sr-only">Search</span>
@@ -61,6 +65,7 @@
           </button>
         </div>
       </div>
+      <!-- nav links -->
       <div id="nav-links">
         <ul>
           <li><a href="/">Bedroom</a></li>
@@ -77,10 +82,12 @@
     <!-- hero -->
     <section id="hero">
       <div id="hero-carousel" class="glide">
+        <!-- CTA + button -->
         <div class="hero-overlay">
           <h2>Love the Space<br>You Live In</h2>
           <button>Shop Now</button>
         </div>
+        <!-- img carousel -->
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             <li class="glide__slide hero-img">
@@ -93,6 +100,7 @@
               <img alt="Home office with white chair in front of table with a computer in a white room" src="/img/hero-3.jpg" />
             </li>
           </ul>
+          <!-- arrow controls -->
           <div class="glide__arrows" data-glide-el="controls">
             <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<">
               <i class="bi bi-chevron-left" title="Previous" aria-hidden="true"></i>
@@ -103,6 +111,7 @@
               <span class="sr-only">Next</span>
             </button>
           </div>
+          <!-- bullet controls -->
           <div class="glide__bullets" data-glide-el="controls[nav]">
             <button type="button" class="glide__bullet" data-glide-dir="=0">
               <i class="bi bi-circle-fill" title="1" aria-hidden="true"></i>
@@ -120,13 +129,15 @@
         </div>
       </div>
     </section>
+    <!-- products -->
     <section id="products">
+      <!-- category btns -->
       <ul class="products-categories">
         <li><button id="category-featured" class="active">Featured</button></li>
         <li><button id="category-new">New</button></li>
         <li><button id="category-bestsellers">Bestsellers</button></li>
       </ul>
-
+      <!-- product cards -->
       <div id="products-featured" class="product-cards active">
         <article class="product-card">
           <img class="product-img" alt="" src=""/>
@@ -194,6 +205,7 @@
         </article>
       </div>
     </section>
+    <!-- collections -->
     <section id="collections">
       <h2>Collections</h2>
       <div id="collections-container">
@@ -207,6 +219,7 @@
   </main>
   <!-- footer -->
   <footer>
+    <!-- links -->
     <section class="footer-links">
       <h2>Company Information</h2>
       <ul>
@@ -225,6 +238,7 @@
         <li><a href="/">Order Tracking</a></li>
       </ul>
     </section>
+    <!-- socials -->
     <section class="footer-socials">
       <ul>
         <li>
