Add product cards content

--- a/public/index.html
+++ b/public/index.html
@@ -138,70 +138,70 @@
         <li><button id="category-bestsellers">Bestsellers</button></li>
       </ul>
       <!-- product cards -->
-      <div id="products-featured" class="product-cards active">
+      <div id="products-featured" class="product-cards">
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Yellow loveseat sofa wth patterned cushions" src="/img/featured-1.jpg"/>
+          <p class="product-name">Hi Sofa</p>
+          <p class="product-price">$699</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Wooden dining table with a potted plant on top and wooden seats around it" src="/img/featured-2.jpg"/>
+          <p class="product-name">Zennin Dining Table</p>
+          <p class="product-price">$349</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Black nightsand with two drawers with a black vase on top" src="/img/featured-3.jpg"/>
+          <p class="product-name">Yume Nightstand</p>
+          <p class="product-price">$259</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Short wooden table with four legs with a cup of coffee on top" src="/img/featured-4.jpg"/>
+          <p class="product-name">Hinoki Coffee Table</p>
+          <p class="product-price">$425</p>
         </article>
       </div>
       <div id="products-new" class="product-cards">
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Tall ceramic vase with an orange floral pattern" src="/img/new-1.jpg"/>
+          <p class="product-name">Hanabi Vase</p>
+          <p class="product-price">$125</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="White cushioned chair with four wooden legs" src="/img/new-2.jpg"/>
+          <p class="product-name">Kumo Chair</p>
+          <p class="product-price">$299</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="" src="/img/new-3.jpg"/>
+          <p class="product-name">Mizutamari Rug</p>
+          <p class="product-price">$150</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Short vermillion lamp with an orange lampshade emitting a warm glow" src="/img/new-4.jpg"/>
+          <p class="product-name">Honou Lamp</p>
+          <p class="product-price">$249</p>
         </article>
       </div>
-      <div id="products-bestsellers" class="product-cards">
+      <div id="products-bestsellers" class="product-cards active">
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Light green cushioned armchair with four black legs" src="/img/bestsellers-1.jpg"/>
+          <p class="product-name">Raku Chair</p>
+          <p class="product-price">$299</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Black futon with a blue mattress and white and blue pillows" src="/img/bestsellers-2.jpg"/>
+          <p class="product-name">Nemui Futon</p>
+          <p class="product-price">$599</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="Tall white bookshelf with multiple layers of shelves with books on them" src="/img/bestsellers-3.jpg"/>
+          <p class="product-name">Chishki Bookshelf</p>
+          <p class="product-price">$220</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src=""/>
-          <p class="product-name">Product Name</p>
-          <p class="product-price">$100.00</p>
+          <img class="product-img" alt="White ceramic tea set with a teapot and three cups of tea on a woven base" src="/img/bestsellers-4.jpg"/>
+          <p class="product-name">Suijin Tea Set</p>
+          <p class="product-price">$80</p>
         </article>
       </div>
     </section>
