Style product cards

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
         <li><button id="category-bestsellers">Bestsellers</button></li>
       </ul>
       <!-- product cards -->
-      <div id="products-featured" class="product-cards">
+      <div id="products-featured" class="product-cards active">
         <article class="product-card">
           <img class="product-img" alt="Yellow loveseat sofa wth patterned cushions" src="/img/featured-1.jpg"/>
           <p class="product-name">Hi Sofa</p>
@@ -182,7 +182,7 @@
           <p class="product-price">$249</p>
         </article>
       </div>
-      <div id="products-bestsellers" class="product-cards active">
+      <div id="products-bestsellers" class="product-cards">
         <article class="product-card">
           <img class="product-img" alt="Light green cushioned armchair with four black legs" src="/img/bestsellers-1.jpg"/>
           <p class="product-name">Raku Chair</p>
