Add collections imgs

--- a/public/index.html
+++ b/public/index.html
@@ -209,11 +209,11 @@
     <section id="collections">
       <h2>Collections</h2>
       <div id="collections-container">
-        <img id="collection-1" class="collection-img" alt="" src=""/>
-        <img id="collection-2" class="collection-img" alt="" src=""/>
-        <img id="collection-3" class="collection-img" alt="" src=""/>
-        <img id="collection-4" class="collection-img" alt="" src=""/>
-        <img id="collection-5" class="collection-img" alt="" src=""/>
+        <img id="collection-1" class="collection-img" alt="Interior design of a house with a wooden staircase and row of ceiling lights" src="/img/collections-1.jpg"/>
+        <img id="collection-2" class="collection-img" alt="Dining room with a black table and chair set and large windows facing the sea" src="/img/collections-2.jpg"/>
+        <img id="collection-3" class="collection-img" alt="Room with a glass table with dark grey chairs around it and a white chandelier" src="/img/collections-3.jpg"/>
+        <img id="collection-4" class="collection-img" alt="Living room with two chairs and a table in front of a fire place" src="/img/collections-4.jpg"/>
+        <img id="collection-5" class="collection-img" alt="Bedroom with a large grey bed and two small stools on a rug" src="/img/collections-5.jpg"/>
       </div>
     </section>
   </main>
