Use relative file paths

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@3.0.0/reset.min.css" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
           </button>
           <!-- logo -->
           <a id="nav-logo" href="#top">
-            <img alt="okaeri logo" src="/img/logo.svg"/>
+            <img alt="okaeri logo" src="img/logo.svg"/>
             <h1>okaeri</h1>
           </a>
         </div>
@@ -91,13 +91,13 @@
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             <li class="glide__slide hero-img">
-              <img alt="Kitchen with white center island and brown wooden stools" src="/img/hero-1.jpg" />
+              <img alt="Kitchen with white center island and brown wooden stools" src="img/hero-1.jpg" />
             </li>
             <li class="glide__slide hero-img">
-              <img alt="Furniture set of white dining chairs and table in a brightly-lit room" src="/img/hero-2.jpg" />
+              <img alt="Furniture set of white dining chairs and table in a brightly-lit room" src="img/hero-2.jpg" />
             </li>
             <li class="glide__slide hero-img">
-              <img alt="Home office with white chair in front of table with a computer in a white room" src="/img/hero-3.jpg" />
+              <img alt="Home office with white chair in front of table with a computer in a white room" src="img/hero-3.jpg" />
             </li>
           </ul>
           <!-- arrow controls -->
@@ -140,66 +140,66 @@
       <!-- product cards -->
       <div id="products-featured" class="product-cards active">
         <article class="product-card">
-          <img class="product-img" alt="Yellow loveseat sofa wth patterned cushions" src="/img/featured-1.jpg"/>
+          <img class="product-img" alt="Yellow loveseat sofa wth patterned cushions" src="img/featured-1.jpg"/>
           <p class="product-name">Hi Sofa</p>
           <p class="product-price">$699</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="Wooden dining table with a potted plant on top and wooden seats around it" src="/img/featured-2.jpg"/>
+          <img class="product-img" alt="Wooden dining table with a potted plant on top and wooden seats around it" src="img/featured-2.jpg"/>
           <p class="product-name">Zennin Dining Table</p>
           <p class="product-price">$349</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="Black nightsand with two drawers with a black vase on top" src="/img/featured-3.jpg"/>
+          <img class="product-img" alt="Black nightsand with two drawers with a black vase on top" src="img/featured-3.jpg"/>
           <p class="product-name">Yume Nightstand</p>
           <p class="product-price">$259</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="Short wooden table with four legs with a cup of coffee on top" src="/img/featured-4.jpg"/>
+          <img class="product-img" alt="Short wooden table with four legs with a cup of coffee on top" src="img/featured-4.jpg"/>
           <p class="product-name">Hinoki Coffee Table</p>
           <p class="product-price">$425</p>
         </article>
       </div>
       <div id="products-new" class="product-cards">
         <article class="product-card">
-          <img class="product-img" alt="Tall ceramic vase with an orange floral pattern" src="/img/new-1.jpg"/>
+          <img class="product-img" alt="Tall ceramic vase with an orange floral pattern" src="img/new-1.jpg"/>
           <p class="product-name">Hanabi Vase</p>
           <p class="product-price">$125</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="White cushioned chair with four wooden legs" src="/img/new-2.jpg"/>
+          <img class="product-img" alt="White cushioned chair with four wooden legs" src="img/new-2.jpg"/>
           <p class="product-name">Kumo Chair</p>
           <p class="product-price">$299</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="" src="/img/new-3.jpg"/>
+          <img class="product-img" alt="" src="img/new-3.jpg"/>
           <p class="product-name">Mizutamari Rug</p>
           <p class="product-price">$150</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="Short vermillion lamp with an orange lampshade emitting a warm glow" src="/img/new-4.jpg"/>
+          <img class="product-img" alt="Short vermillion lamp with an orange lampshade emitting a warm glow" src="img/new-4.jpg"/>
           <p class="product-name">Honou Lamp</p>
           <p class="product-price">$249</p>
         </article>
       </div>
       <div id="products-bestsellers" class="product-cards">
         <article class="product-card">
-          <img class="product-img" alt="Light green cushioned armchair with four black legs" src="/img/bestsellers-1.jpg"/>
+          <img class="product-img" alt="Light green cushioned armchair with four black legs" src="img/bestsellers-1.jpg"/>
           <p class="product-name">Raku Chair</p>
           <p class="product-price">$299</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="Black futon with a blue mattress and white and blue pillows" src="/img/bestsellers-2.jpg"/>
+          <img class="product-img" alt="Black futon with a blue mattress and white and blue pillows" src="img/bestsellers-2.jpg"/>
           <p class="product-name">Nemui Futon</p>
           <p class="product-price">$599</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="Tall white bookshelf with multiple layers of shelves with books on them" src="/img/bestsellers-3.jpg"/>
+          <img class="product-img" alt="Tall white bookshelf with multiple layers of shelves with books on them" src="img/bestsellers-3.jpg"/>
           <p class="product-name">Chishki Bookshelf</p>
           <p class="product-price">$220</p>
         </article>
         <article class="product-card">
-          <img class="product-img" alt="White ceramic tea set with a teapot and three cups of tea on a woven base" src="/img/bestsellers-4.jpg"/>
+          <img class="product-img" alt="White ceramic tea set with a teapot and three cups of tea on a woven base" src="img/bestsellers-4.jpg"/>
           <p class="product-name">Suijin Tea Set</p>
           <p class="product-price">$80</p>
         </article>
@@ -209,11 +209,11 @@
     <section id="collections">
       <h2>Collections</h2>
       <div id="collections-container">
-        <img id="collection-1" class="collection-img" alt="Interior design of a house with a wooden staircase and row of ceiling lights" src="/img/collections-1.jpg"/>
-        <img id="collection-2" class="collection-img" alt="Dining room with a black table and chair set and large windows facing the sea" src="/img/collections-2.jpg"/>
-        <img id="collection-3" class="collection-img" alt="Room with a glass table with dark grey chairs around it and a white chandelier" src="/img/collections-3.jpg"/>
-        <img id="collection-4" class="collection-img" alt="Living room with two chairs and a table in front of a fire place" src="/img/collections-4.jpg"/>
-        <img id="collection-5" class="collection-img" alt="Bedroom with a large grey bed and two small stools on a rug" src="/img/collections-5.jpg"/>
+        <img id="collection-1" class="collection-img" alt="Interior design of a house with a wooden staircase and row of ceiling lights" src="img/collections-1.jpg"/>
+        <img id="collection-2" class="collection-img" alt="Dining room with a black table and chair set and large windows facing the sea" src="img/collections-2.jpg"/>
+        <img id="collection-3" class="collection-img" alt="Room with a glass table with dark grey chairs around it and a white chandelier" src="img/collections-3.jpg"/>
+        <img id="collection-4" class="collection-img" alt="Living room with two chairs and a table in front of a fire place" src="img/collections-4.jpg"/>
+        <img id="collection-5" class="collection-img" alt="Bedroom with a large grey bed and two small stools on a rug" src="img/collections-5.jpg"/>
       </div>
     </section>
   </main>
@@ -275,6 +275,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
   <script src="https://cdn.jsdelivr.net/npm/macy@2"></script>
 
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
