--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
         <div class="nav-group nav-right">
           <!-- search bar -->
           <div id="nav-search-bar" class="hidden">
-            <form method="get" action="/search">
+            <form>
               <input id="search-input" type="search" name="q" placeholder="Search" />
               <button type="submit" id="search-btn" value="">
                 <i class="bi bi-search" title="Search" aria-hidden="true"></i>
